# pridelet

./: .gitignore  Makefile.am  README.md  TODO  colors.json  configure.ac
doc/: Makefile.am  pridelet.1.in
src/: Makefile.am  figlet.c  filter.c  main.c  toilet.h
